1 down, and fixed page shift
Finished my part of the tags page, as well as fixed a problem with the page shifting. It was due to the scroll bar appearing on the right which moved everything to the left. Added a few lines to the css so that this bar always appears and everything stays the same.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 
+html {
+    overflow-y:scroll
+}
+
 html, body {
     text-align: center;
     font-family: sans-serif;
